# native-image.js

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: pr.yaml  release.yaml
install/: check.js
src/: actual_class.cc  actual_class.h  countdown.cc  hello.cc  hello.h  js-lib-vips.cc  js-lib-vips.h  jsobj_to_internal.cc  main.cc  native_image.cc  native_image.h  utils.cc  utils.h
test/js/: js-lib-vips-test.js
test/ts/: countdown.ts  memory-leak.ts  samples.ts  vips.sh
